--- a/style.css
+++ b/style.css
@@ -609,7 +609,7 @@ footer > ul li ion-icon {
         display: none;
         position: absolute;
         top: 60px;
-           width: 100%;
+        width: 80%;
         background: rgba(0, 0, 0, 0.9);
         padding: 20px;
         text-align: center;
@@ -635,22 +635,9 @@ footer > ul li ion-icon {
         z-index: 1000;
     }
 
-    nav .right.active {
-        display: flex;
-        flex-direction: column;
-        gap: 20px;
-    }
-
-    nav .left ul li,
-    nav .right li {
-        color: #fff;
-        padding: 10px;
-        width: 100%;
-    }
-
-    nav .left ul li:hover,
-    nav .right li:hover {
-        background-color: rgba(0, 204, 255, 0.2);
+ 
+    nav .left ul li:hover {
+        color: #2c3e50;
         border-radius: 5px;
         transition: 0.3s all ease-in-out;
     }
@@ -664,16 +651,13 @@ footer > ul li ion-icon {
         flex-direction: column;
     }
 
-    nav .right.active{
-        display: flex;
-    }
+   
     nav .left.active{
         display: flex;
+        
     }
+    
 
-    nav .left ul li :hover{
-        background-color: #2c3e50;
-    }
     .about-cards {
         display: flex;
         flex-direction: column;
